<@julianemartins, @ingridDuarte> arruma navegaçao editar solicitações

--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -31,7 +31,7 @@
                                     <div class="board-item-content"><a href="/solicitacao/listagemHospede">Gerenciar Hospedes</a></div>
                                 </div>
                                 <div class="board-item">
-                                    <div class="board-item-content"><a th:href="@{/listaUsuarios}">Gerenciar Usuários</a></div>
+                                    <div class="board-item-content"><a th:href="@{/usuario/listaUsuarios}">Gerenciar Usuários</a></div>
                                 </div>
                                 <div class="board-item">
                                     <div class="board-item-content"><a href="/registrar">Registrar usuários</a></div>
