--- a/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
@@ -5,9 +5,11 @@
 </head>
 
 <body>
-    <main>
-        <div  sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())"> Você não tem autorização para acessar essa página</div>
-        <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
+<main>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())">
+        Você não tem autorização para acessar essa página
+    </div>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
         <div class="container">
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
@@ -36,7 +38,7 @@
                 </div>
             </div>
         </div>
-        </div>
-    </main>
+    </div>
+</main>
 </body>
 </html>
