--- a/app/src/main/resources/templates/quarto/quarto.html
+++ b/app/src/main/resources/templates/quarto/quarto.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html th:replace="~{layout :: layout(~{::title}, ~{::main})}" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+
 <head>
-    <title>Hospebem - Quartos</title>
+    <title>Hospebem</title>
 </head>
 
 <body>
 <main>
-    <div  sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())"> Você não tem autorização para acessar essa página</div>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())">
+        Você não tem autorização para acessar essa página
+    </div>
     <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
         <div class="container">
-        <div class="section">
-            <nav class="breadcrumb" aria-label="breadcrumbs">
-                <ul>
-                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
-                    <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Lista de Solicitações</a></li>
-                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}" class="has-text-black" href="#" aria-current="page">Lista de Quartos</a></li>
-                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/quarto/' + ${quarto.id}}">Dados do Quarto</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
+            <div class="section">
+                <nav class="breadcrumb" aria-label="breadcrumbs">
+                    <ul>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
+                        <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Lista de Solicitações</a></li>
+                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}" class="has-text-black" href="#" aria-current="page">Lista de Quartos</a></li>
+                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/quarto/' + ${quarto.id}}">Dados do Quarto</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
 
             <div class="columns is-multiline is-lefty">
                 <span class="tag is-success is-medium" th:text="${quarto.nomeQuarto}"></span>
             </div>
 
             <div class="is-mobile is-centered">
-            <h2 class="title is-5 is-half centralizar espacamento-titulo">Ocupado por:</h2>
-            <th:block th:each="ocupante : ${ocupantes}">
-                <div class="centralizar">
-                    <p>
-                        <label>
-                            <strong>Nome:</strong>
-                        </label>
-                        <label th:text="${ocupante.nome}"></label>
-                    </p>
-                </div>
-            </th:block>
+                <h2 class="title is-5 is-half centralizar espacamento-titulo">Ocupado por:</h2>
+                <th:block th:each="ocupante : ${ocupantes}">
+                    <div class="centralizar">
+                        <p>
+                            <label>
+                                <strong>Nome:</strong>
+                            </label>
+                            <label th:text="${ocupante.nome}"></label>
+                        </p>
+                    </div>
+                </th:block>
+            </div>
+            <div class="is-centered is-half centralizar espacamento" th:if="${quarto.leitosDisponiveis() > 0}">
+                <form th:action="@{/quarto/aceitar}" method="POST">
+                    <input type="hidden" name="id" th:value="${solicitacao.id}">
+                    <input type="hidden" name="idQuarto" th:value="${quarto.id}">
+                    <button type="submit" class="button verde-viavida borda-arredondada"> Aceitar Solicitação </button>
+                </form>
+                <form th:action="@{/quarto/negar}" method="POST">
+                    <input type="hidden" name="id" th:value="${solicitacao.id}">
+                    <input type="hidden" name="idQuarto" th:value="${quarto.id}">
+                    <button type="submit" class="button verde-viavida borda-arredondada"> Negar Solicitação</button>
+                </form>
+            </div>
         </div>
-        <div class="is-centered is-half centralizar espacamento" th:if="${quarto.leitosDisponiveis() > 0}">
-            <form th:action="@{/quarto/aceitar}" method="POST">
-                <input type="hidden" name="id" th:value="${solicitacao.id}">
-                <input type="hidden" name="idQuarto" th:value="${quarto.id}">
-                <button type="submit" class="button verde-viavida borda-arredondada"> Aceitar Solicitação </button>
-            </form>
-            <form th:action="@{/quarto/negar}" method="POST">
-                <input type="hidden" name="id" th:value="${solicitacao.id}">
-                <input type="hidden" name="idQuarto" th:value="${quarto.id}">
-                <button type="submit" class="button verde-viavida borda-arredondada"> Negar Solicitação</button>
-            </form>
-        </div>
-    </div>
     </div>
 </main>
 </body>
