--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -1,61 +1,54 @@
 <!DOCTYPE html>
 <html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-    <meta charset="UTF-8">
     <title>Hospebem</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-        crossorigin="anonymous">
-    <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
-            Você não tem autorização para acessar essa página</div>
-        <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())">
-            <div class="container">
-                <h1 class="title is-half centralizar espacamento has-text-centered">Lista de Solicitações</h1>
-                <form th:action="@{/solicitacao/cadastro}" method="GET">
-                    <div class="is-centered is-half centralizar espacamento">
-                        <input type="submit" class="button verde-viavida borda-arredondada" value="Solicitar Vaga" />
-                    </div>
-                </form>
-                <div class="section">
-                    <div class="columns is-multiline is-lefty">
-                        <div th:each="solicitacao : ${solicitacoesHospital}">
-                            <div class="column">
-                                <div class="box box-shadow">
-                                    <strong><span>Nome:</span></strong>
-                                    <span th:text="${solicitacao.nome} + ' - '"></span>
-                                    <strong><span>Status:</span></strong>
-                                    <span th:text="${solicitacao.status}"></span>
-                                    <hr>
-                                    <strong><span>Data de atualização:</span></strong>
-                                    <span th:text="${solicitacao.formataData()}"></span>
-                                    <hr>
-                                    <div class="field has-addons">
-                                        <th:block th:if="${solicitacao.status.toString()} != 'ACEITO'">
-                                            <div class="control">
+<main>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
+        Você não tem autorização para acessar essa página
+    </div>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())">
+        <div class="container">
+            <h1 class="title is-half centralizar espacamento has-text-centered">Lista de Solicitações</h1>
+            <form th:action="@{/solicitacao/cadastro}" method="GET">
+                <div class="is-centered is-half centralizar espacamento">
+                    <input type="submit" class="button verde-viavida borda-arredondada" value="Solicitar Vaga" />
+                </div>
+            </form>
+            <div class="section">
+                <div class="columns is-multiline is-lefty">
+                    <div th:each="solicitacao : ${solicitacoesHospital}">
+                        <div class="column">
+                            <div class="box box-shadow">
+                                <strong><span>Nome:</span></strong>
+                                <span th:text="${solicitacao.nome} + ' - '"></span>
+                                <strong><span>Status:</span></strong>
+                                <span th:text="${solicitacao.status}"></span>
+                                <hr>
+                                <strong><span>Data de atualização:</span></strong>
+                                <span th:text="${solicitacao.formataData()}"></span>
+                                <hr>
+                                <div class="field has-addons">
+                                    <th:block th:if="${solicitacao.status.toString()} != 'ACEITO'">
+                                        <div class="control">
+                                            <button class="button" type="submit">
                                                 <a th:href="@{'/solicitacao/' + ${solicitacao.id} + '/editarPaciente'}">
-                                                    <button class="button" type="submit">
-                                                        <span>Editar</span>
-                                                        <span class="icon is-small"><i class="fas fa-edit"></i></span>
-                                                    </button>
+                                                    <span>Editar</span>
+                                                    <span class="icon is-small"><i class="fas fa-edit"></i></span>
                                                 </a>
-                                            </div>
-                                            <div class="control">
-                                                <a th:href="@{'/solicitacao/' + ${solicitacao.id} + '/excluir'}">
-                                                    <button class="button is-danger" type="submit"
+                                            </button>
+                                        </div>
+                                        <div class="control">
+                                            <a th:href="@{'/solicitacao/' + ${solicitacao.id} + '/excluir'}">
+                                                <button class="button is-danger" type="submit"
                                                         onclick="return confirm('Tem certeza que deseja excluir?');">
-                                                        <span>Excluir</span>
-                                                        <span class="icon is-small"><i class="fas fa-trash-alt"></i></span>
-                                                    </button>
-                                                </a>
-                                            </div>
-                                        </th:block>
-                                    </div>
+                                                    <span>Excluir</span>
+                                                    <span class="icon is-small"><i class="fas fa-trash-alt"></i></span>
+                                                </button>
+                                            </a>
+                                        </div>
+                                    </th:block>
                                 </div>
                             </div>
                         </div>
@@ -63,6 +56,7 @@
                 </div>
             </div>
         </div>
-    </main>
+    </div>
+</main>
 </body>
 </html>
