--- a/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
@@ -38,8 +38,7 @@
                                     </th:block>
                                 </ul>
                                 <div class="recuperar">
-                                    <strong> Data Check-In: </strong>
-                                    <span th:text="${solicitacao.dataCheckin.format(formataData)}"></span>
+                                    <span th:text="${solicitacao.dataCheckin} == null ? '' : ${solicitacao.dataCheckin.format(formataData)}"></span>
                                 </div>
                                 <hr>
                                 <form th:action="@{'/solicitacao/' + ${solicitacao.id} + '/checkout'}"
