--- a/app/src/main/resources/templates/solicitacao/dadosSolicitacao.html
+++ b/app/src/main/resources/templates/solicitacao/dadosSolicitacao.html
@@ -23,7 +23,7 @@
         </div>
         <div class="card-content valign center has-text-centered">
             <div class="columns ">
-                <th:block th:object="${solicitacao}">
+                <div th:object="${solicitacao}">
                     <h2 class="title is-2">Dados do Paciente</h2>
 
                     <div class="column is-10">
@@ -279,7 +279,7 @@
                             </div>
                         </div>
                     </div>
-                </th:block>
+                </div>
             </div>
         </div>
     </div>
