--- a/app/src/main/resources/templates/usuario/listagens/listaUsuarios.html
+++ b/app/src/main/resources/templates/usuario/listagens/listaUsuarios.html
@@ -25,7 +25,7 @@
             </div>
             <div class="section">
                 <div class="columns is-multiline is-lefty">
-                    <th:block th:each="usuario : ${usuarios}">
+                    </th:blockth:each="usuario : ${usuarios}">
                         <div class="column is-3 is-mobile">
                             <div class="box box-shadow">
                                 <div class="column">
