<@natymoraes, @ingridDuarte> ajusta gerenciar usuarios

--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -32,6 +32,7 @@
                                     <div class="board-item">
                                         <div class="board-item-content"><a th:href="@{/solicitacao/listagemHospede}">Gerenciar Hospedes</a></div>
                                     </div>
+                                    <div class="board-item-content"><a th:href="@{/usuario/listaUsuarios}">Gerenciar Usuários</a></div>
                                     <div class="board-item">
                                         <div class="board-item-content"><a th:href="@{/registrar}">Registrar usuários</a></div>
                                     </div>
