<@natymoraes, @ingridDuarte> Ajusta liks BemVindo

--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -27,14 +27,16 @@
                                 </div>
                                 <div class="message-body espaco-linhas">
                                     <div class="board-item">
-                                        <div class="board-item-content"><a th:href="@{/solicitacao/casa/lista}">Lista de solicitações</a></div>
+                                        <div class="board-item-content"><a th:href="@{/registrar}">Registrar usuários</a></div>
+                                    </div>
+                                    <div class="board-item">
+                                        <div class="board-item-content"><a th:href="@{/usuario/listaUsuarios}">Gerenciar Usuários</a></div>
                                     </div>
                                     <div class="board-item">
                                         <div class="board-item-content"><a th:href="@{/solicitacao/listagemHospede}">Gerenciar Hospedes</a></div>
                                     </div>
-                                    <div class="board-item-content"><a th:href="@{/usuario/listaUsuarios}">Gerenciar Usuários</a></div>
                                     <div class="board-item">
-                                        <div class="board-item-content"><a th:href="@{/registrar}">Registrar usuários</a></div>
+                                        <div class="board-item-content"><a th:href="@{/solicitacao/casa/lista}">Lista de solicitações</a></div>
                                     </div>
                                     <div class="board-item">
                                         <div class="board-item-content"><a th:href="@{/listacheckincheckout}">Lista Check-in/Check-out</a></div>
