<@ingridDuarte, @natymoraes, @brendamoniqueb> renderiza mapa de quartos sem uma solicitação

--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -33,10 +33,13 @@
                                         <div class="board-item-content"><a th:href="@{/usuario/listaUsuarios}">Gerenciar Usuários</a></div>
                                     </div>
                                     <div class="board-item">
+                                        <div class="board-item-content"><a th:href="@{/solicitacao/casa/lista}">Lista de solicitações</a></div>
+                                    </div>
+                                    <div class="board-item">
                                         <div class="board-item-content"><a th:href="@{/solicitacao/listagemHospede}">Gerenciar Hospedes</a></div>
                                     </div>
                                     <div class="board-item">
-                                        <div class="board-item-content"><a th:href="@{/solicitacao/casa/lista}">Lista de solicitações</a></div>
+                                        <div class="board-item-content"><a th:href="@{/quarto/mapaQuartos}">Mapa de Quartos</a></div>
                                     </div>
                                     <div class="board-item">
                                         <div class="board-item-content"><a th:href="@{/listacheckincheckout}">Lista Check-in/Check-out</a></div>
