--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -8,16 +8,11 @@
     <div class="agrupadora">
         <nav class="navegacao">
             <ul>
-                <a href="/"><li>Início</li></a>
-                <a href="/bemvindo"><li>Bem vindo</li></a>
-                <a href="/solicitacao/cadastro"><li>Cadastro solicitação </li></a>
-                <a href="/solicitacao/casa/lista"><li>Lista geral de solicitações casa</li></a>
-                <a href="/solicitacao/hospital/lista"><li>Lista geral de solicitações hospital</li></a>
-                <a href="/solicitacao/listagemHospede"><li>Gerenciar Hospede</li></a>
-                <a href="/registrar"><li>Registrar</li></a>
+                <img src="../static/imagem/hospebem.png">
                 <a href="/login"><li>Login</li></a>
             </ul>
         </nav>
+    </div>
     </div>
 </body>
 </html>
