Colocando imagem na página inicial.

--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -8,7 +8,7 @@
     <div class="agrupadora">
         <nav class="navegacao">
             <ul>
-                <img src="../static/imagem/hospebem.png">
+                <img th:src="@{/imagem/hospebem.png}">
                 <a href="/login"><li>Login</li></a>
             </ul>
         </nav>
